--- a/config/prod.yaml
+++ b/config/prod.yaml
@@ -1,5 +1,5 @@
 env: "prod" # local, dev, prod
-storage_path: "./storage/storage.db"
+storage_path: "./storage.db"
 http_server:
   address: "0.0.0.0:8082"
   timeout: 4s
